--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,95 +2,193 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.tcc.iteach.MainActivity">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#e6f2ff"
+    tools:context=".MainActivity">
 
-    <LinearLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:orientation="vertical"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#1fabcb"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="ITeach"
+                    android:textAlignment="center"
+                    android:textColor="#ffffff"
+                    android:textSize="25dp"
+                    android:textStyle="italic" />
+
+            </RelativeLayout>
+
+
+        </android.support.v7.widget.Toolbar>
+
+
+    </android.support.design.widget.AppBarLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/roundimage"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="79dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+        app:srcCompat="@drawable/login"
+        tools:ignore="MissingConstraints" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="308dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
         tools:ignore="MissingConstraints">
 
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_1"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+            android:backgroundTint="#ffffff"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="10dp"
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginLeft="110dp"
-            android:background="@mipmap/ic_launcher_round" />
+            >
 
-        <TextView
-            android:id="@+id/textview2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="تسجيل الدخول"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/darkBlue"
-            android:textSize="25sp"
+            <EditText
+                android:id="@+id/editTextEmail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="4dp"
+                android:layout_marginHorizontal="3dp"
+                android:drawableLeft="@drawable/ic_email_black_24dp"
+                android:hint="قم بادخال عنوان البريد الالكتروني"
+                android:inputType="textEmailAddress"
+                android:paddingVertical="4dp"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textColorHint="#000066"
+                android:textSize="13dp"
+                android:paddingBottom="7dp"
+                android:paddingRight="7dp"
+                android:paddingTop="7dp"
+                android:textDirection="ltr"
+                android:textColorLink="#000000"
+                />
 
 
-            />
+        </android.support.v7.widget.CardView>
 
 
-        <EditText
-            android:id="@+id/editTextEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:hint="فضلاً أدخل الايميل"
-            android:inputType="textEmailAddress"
-            android:textColor="@color/darkBlue"
-            android:textSize="20sp" />
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_2"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/card_1"
+            android:layout_centerHorizontal="true"
+            app:cardElevation="10dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#ffffff"
+            app:cardCornerRadius="12dp">
 
-        <EditText
-            android:id="@+id/editTextPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            <EditText
+                android:id="@+id/editTextPassword"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="4dp"
+                android:layout_marginHorizontal="3dp"
+                android:drawableLeft="@drawable/ic_lock_black_24dp"
+                android:hint=" فضلا قم بادخال كلمة المرور"
+                android:inputType="textPassword"
+                android:paddingVertical="4dp"
+                android:textAlignment="center"
+                android:textColorLink="#000000"
+                android:paddingBottom="7dp"
+                android:paddingRight="7dp"
+                android:paddingTop="7dp"
+                android:textColor="#000000"
+                android:textColorHint="#000066"
+                android:textSize="13dp"
 
-            android:hint="فضلاً أدخل كلمة المرور"
-            android:inputType="textPassword"
-            android:textColor="@color/darkBlue"
-            android:textSize="20sp" />
 
+                />
+
+
+        </android.support.v7.widget.CardView>
 
         <Button
             android:id="@+id/buttonSignin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:background="@color/darkPink"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:layout_below="@+id/card_2"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/buttonshape"
             android:text="تسجيل الدخول"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/textViewSignUp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ليس لديك حساب؟؟ اضغط هنا "
             android:textAlignment="center"
-            android:textColor="@color/darkBlue"
-            android:textSize="20sp" />
+            android:textColor="#ffffff"
+            android:textSize="14dp"
+            android:textStyle="bold"
+
+            />
+
 
         <TextView
             android:id="@+id/forgetpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-
+            android:layout_below="@id/buttonSignin"
+            android:layout_margin="10dp"
             android:text="هل نسيت كلمة السر؟؟ اضغط هنا "
             android:textAlignment="center"
-            android:textColor="@color/darkBlue"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:textSize="12dp" />
+
+
+        <TextView
+            android:id="@+id/textViewSignUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:text="انشاء حساب جديد "
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="12dp"
+            android:textStyle="bold|italic"
+
+            />
+
+    </RelativeLayout>
+
 
 </android.support.constraint.ConstraintLayout>
