--- a/app/src/main/res/layout/content_student_main.xml
+++ b/app/src/main/res/layout/content_student_main.xml
@@ -23,6 +23,6 @@
 
 </android.support.v7.widget.CardView>
 
-    <Button android:background="@drawable/buttonshape" android:layout_height="35dp" android:layout_width="250dp" android:layout_marginTop="40dp" android:id="@+id/findInstructor" android:layout_centerHorizontal="true" android:textAlignment="center" android:textColor="@color/white" android:textStyle="bold" android:text="ابحث عن أستاذ" android:textSize="16dp" android:layout_marginBottom="7dp" android:drawablePadding="12dp" android:drawableLeft="@drawable/ic_search_black_24dp" android:layout_gravity="center"/>
+    <Button android:background="@drawable/buttonshape" android:layout_height="35dp" android:layout_width="250dp" android:layout_marginTop="40dp" android:id="@+id/findInstructor" android:layout_centerHorizontal="true" android:textAlignment="center" android:textColor="@color/white" android:textStyle="bold" android:text="ابحث عن أستاذ" android:textSize="16dp" android:layout_marginBottom="7dp" android:drawablePadding="12dp"  android:layout_gravity="center"/>
 
 </LinearLayout>
