--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -37,6 +37,7 @@
                     android:layout_marginLeft="120dp"
                     android:text="أهلا بك"
                     android:textSize="25sp" />
+                    android:textSize="34sp" />
 
 
                 <LinearLayout
@@ -47,8 +48,9 @@
 
                     <Button
                         android:id="@+id/instructor"
-                        android:layout_width="35dp"
-                        android:layout_height="173dp"
+                        android:layout_width="0dp"
+                        android:textSize="34sp"
+                        android:layout_height="match_parent"
                         android:layout_marginBottom="5sp"
                         android:layout_marginLeft="2sp"
                         android:layout_marginRight="5sp"
@@ -56,52 +58,64 @@
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
                         android:padding="5dp"
-                        android:scaleType="fitXY"
-
                         android:text="الأساتذة"
-                        android:textColor="@color/white"
-                        android:textSize="20sp" />
+                        android:scaleType="fitXY"
+                         />
 
                     <Button
                         android:id="@+id/student"
-                        android:layout_width="35dp"
-                        android:layout_height="173dp"
+                        android:layout_width="0dp"
+                        android:textSize="34sp"
+                        android:layout_height="match_parent"
                         android:layout_marginBottom="5sp"
-
                         android:layout_marginLeft="2sp"
                         android:layout_marginRight="5sp"
                         android:layout_marginTop="10sp"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
                         android:padding="5dp"
-                        android:scaleType="fitXY"
                         android:text="الطلاب"
-                        android:textColor="@color/white"
-                        android:textSize="20sp" />
+                        android:scaleType="fitXY"
+                         />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="155dp"
+                    android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/blackboard"
-                        android:layout_width="35dp"
-                        android:layout_height="173dp"
+                        android:id="@+id/subject"
+                        android:layout_width="0dp"
+                        android:textSize="34sp"
+                        android:layout_height="match_parent"
                         android:layout_marginBottom="5sp"
                         android:layout_marginLeft="2sp"
                         android:layout_marginRight="5sp"
                         android:layout_marginTop="10sp"
+                        android:layout_weight="1"
+                        android:adjustViewBounds="true"
+                        android:padding="5dp"
+                        android:text="المواد"
+                        android:scaleType="fitXY"
+                        />
 
+                    <Button
+                        android:id="@+id/blackboard"
+                        android:layout_width="0dp"
+                        android:textSize="34sp"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="5sp"
+                        android:layout_marginLeft="2sp"
+                        android:layout_marginRight="5sp"
+                        android:layout_marginTop="10sp"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
                         android:padding="5dp"
                         android:scaleType="fitXY"
                         android:text="منصة الأسئلة"
-                        android:textColor="@color/white"
-                        android:textSize="20sp" />
+                         />
 
                 </LinearLayout>
 
