--- a/app/src/main/res/layout/activity_ask.xml
+++ b/app/src/main/res/layout/activity_ask.xml
@@ -25,12 +25,12 @@
         android:id="@+id/textView"
         android:layout_width="334dp"
         android:layout_height="37dp"
-        android:layout_alignEnd="@+id/questionText"
+        android:layout_alignLeft="@+id/questionText"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="23dp"
+        android:layout_alignStart="@+id/questionText"
+        android:layout_marginTop="29dp"
         tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="27dp"
-        android:hint="من فضلك اختر المادة"/>
+        tools:layout_editor_absoluteY="27dp" />
 
     <Button
         android:id="@+id/publish"
@@ -48,7 +48,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="78dp" />
+        android:layout_alignTop="@+id/textView" />
 
 </RelativeLayout>
