--- a/app/src/main/res/layout/activity_sign_up_instructor.xml
+++ b/app/src/main/res/layout/activity_sign_up_instructor.xml
@@ -149,7 +149,7 @@
 </android.support.v7.widget.CardView>
 
 
-    <android.support.v7.widget.CardView android:layout_height="wrap_content" android:layout_width="300dp" android:layout_centerHorizontal="true" android:id="@+id/card_6" android:layout_below="@+id/card_5" android:layout_marginTop="20dp" android:layout_marginBottom="5dp" app:cardElevation="10dp" android:backgroundTint="#00FFFF">
+    <android.support.v7.widget.CardView android:layout_height="wrap_content" android:layout_width="300dp" android:layout_centerHorizontal="true" android:id="@+id/card_6" android:layout_below="@+id/card_5" android:layout_marginTop="20dp" android:layout_marginBottom="5dp" app:cardElevation="10dp" android:backgroundTint="#1fabcb">
 
 
     <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent" android:layout_margin="5dp">
