--- a/app/src/main/res/layout/content_notifications2.xml
+++ b/app/src/main/res/layout/content_notifications2.xml
@@ -7,10 +7,6 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".notifications2"
     tools:showIn="@layout/app_bar_student_main">
-
-  <ScrollView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/container"
         android:orientation="vertical"
@@ -27,6 +23,7 @@
 
         <ListView
         android:id="@+id/list1"
+        android:layout_marginTop="60dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="5"></ListView>
@@ -37,13 +34,15 @@
             android:textSize="20sp"
             android:text="الإلغاء :"/>
 
-        <ListView
+
+    <ListView
         android:id="@+id/list2"
+        android:layout_marginTop="60dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="5"></ListView>
 
     </LinearLayout>
-  </ScrollView>
+
 
 </RelativeLayout>
