--- a/app/src/main/res/layout/activity_edit_spots.xml
+++ b/app/src/main/res/layout/activity_edit_spots.xml
@@ -645,7 +645,7 @@
                     android:id="@+id/button_individual_23"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Individual"
+                    android:text="فردي"
                     android:layout_marginVertical="10dp"/>
 
                 <Button
