excepion in cancel is gone

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -180,6 +180,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
+            android:layout_centerHorizontal="true"
             android:text="انشاء حساب جديد "
             android:textAlignment="center"
             android:textColor="#000000"
