--- a/app/src/main/res/layout/activity_view_instructor_profile.xml
+++ b/app/src/main/res/layout/activity_view_instructor_profile.xml
@@ -83,7 +83,7 @@
                 android:id="@+id/buttonReserve"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Reserve a lesson" />
+                android:text="حجز درس مع هذا الأستاذ" />
 
 
         </LinearLayout>
