--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -4,48 +4,199 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".answerActivity">
-    <TextView
-        android:id="@+id/answers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="الاجابات"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"/>
+    tools:context=".answerActivity"
+    android:background="#e6f2ff"
+    >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/answersList"
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="482dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/answers"
-        android:layout_marginBottom="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/addAnswer"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="55dp"
-        android:padding="15dp"
-        android:hint="اكتب الاجابة هنا"
-        android:inputType="textMultiLine"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/text_field"/>
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/answerButton"
-        android:layout_alignBottom="@id/addAnswer"
-        android:src="@drawable/send1"
-        android:padding="12dp"
-        android:layout_alignParentLeft="true" />
+        android:layout_height="match_parent"
+        >
+        <LinearLayout
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="20dp"
+            >
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                >
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_1"
+                    android:layout_width="300dp"
+                    android:layout_height="40dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentTop="true"
+                    app:cardElevation="20dp"
+                    android:layout_marginTop="10dp"
+                    android:backgroundTint="#1fabcb"
+                    app:cardCornerRadius="20dp"
+
+                    >
+
+                    <TextView
+
+                        android:id="@+id/answers"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="الاجابات"
+                        android:layout_marginTop="3dp"
+                        android:textColor="#ffffff"
+                        android:textStyle="bold|italic"
+                        android:textSize="25sp"
+                        />
+
+
+
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/card_1"
+                    app:cardElevation="15dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="20dp"
+                    android:backgroundTint="#ffffff"
+                    app:cardCornerRadius="4dp"
+                    android:layout_alignParentRight="true"
+                    >
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/answersList"
+                        android:layout_width="match_parent"
+                        android:layout_height="482dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_below="@id/answers"
+                        android:layout_margin="5dp"
+                        android:background="#ffff"
+                        />
+
+
+
+                </android.support.v7.widget.CardView>
+
+
+                <View
+                    android:id="@+id/v1"
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_margin="5dp"
+                    android:layout_below="@id/card_2"
+                    android:background="#ffff"
+                    />
+
+
+
+
+
+
+
+
+
+
+
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#FFFDE7"
+                    android:layout_below="@id/v1"
+                    android:layout_alignParentRight="true"
+                    android:layoutDirection="rtl"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginBottom="2dp"
+
+                    >
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        >
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/ccc"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="#ffff"
+                            android:layout_alignParentRight="true"
+                            android:layoutDirection="rtl"
+                            android:layout_marginLeft="50dp"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="10dp"
+                            android:layout_marginRight="4dp"
+                            android:layout_marginTop="3dp"
+                            android:layout_marginBottom="2dp"
+                            >
+
+
+                            <EditText
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/addAnswer"
+                                android:hint="اكتب الاجابة هنا"
+                                android:inputType="textMultiLine"
+                                android:layout_alignParentRight="true"
+                                android:layout_alignParentBottom="true"
+                                android:textDirection="rtl"
+                                android:textColor="#000"
+                                android:padding="5dp"
+                                android:textStyle="italic"
+                                android:textSize="20dp"
+                                android:layout_margin="4dp"
+
+
+                                />
+
+                        </android.support.v7.widget.CardView>
+
+
+                        <ImageButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/answerButton"
+                            android:layout_alignBottom="@id/ccc"
+                            android:src="@drawable/send1"
+                            android:padding="12dp"
+                            android:layout_alignParentLeft="true"
+
+                            />
+
+
+
+                    </RelativeLayout>
+
+
+
+                </android.support.v7.widget.CardView>
+
+
+
+            </RelativeLayout>
+
+
+
+
+
+
+        </LinearLayout>
+
+
+
+
+
+    </ScrollView>
 
 </RelativeLayout>
