--- a/app/src/main/res/layout/content_reservations.xml
+++ b/app/src/main/res/layout/content_reservations.xml
@@ -7,7 +7,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".reservations"
     tools:showIn="@layout/app_bar_instructor_main"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#e6f2ff"
+    >
 
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
@@ -18,7 +20,7 @@
         android:id="@+id/tabLayoutReservations"
         app:tabTextColor="#fff"
         app:tabIndicatorColor="#2d2d2d"
-        android:background="@color/colorPrimary"/>
+        android:background="#1fabcb"/>
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
