--- a/app/src/main/res/layout/activity_ask.xml
+++ b/app/src/main/res/layout/activity_ask.xml
@@ -4,50 +4,114 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e6f2ff"
     tools:context=".askActivity">
 
-    <EditText
-        android:id="@+id/questionText"
-        android:layout_width="350dp"
-        android:layout_height="89dp"
-        android:layout_alignParentTop="true"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"
-        android:background="@drawable/text_field"
-        android:ems="10"
-        android:hint="اكتب نص السؤال هنا"
-        android:inputType="textMultiLine"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="181dp" />
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#ffff"
+        app:cardCornerRadius="3dp"
+        app:cardElevation="14dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp">
 
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="334dp"
-        android:layout_height="37dp"
-        android:layout_alignLeft="@+id/questionText"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/questionText"
-        android:layout_marginTop="29dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="27dp" />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="14dp"
+                android:hint=" من فضلك اختر المادة :"
+                android:textColor="#1fabcb"
+                android:textSize="15dp"
+                android:textStyle="bold|italic"
+                android:textDirection="rtl"/>
+
+            <Spinner
+                android:id="@+id/QuestionSpinner"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_below="@+id/textView"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="5dp"
+                android:padding="4dp"
+                android:textDirection="rtl" />
+
+            <View
+                android:id="@+id/vvv1"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/QuestionSpinner"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:background="#1fabcb" />
+
+
+
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/card"
+        android:backgroundTint="#FFFDE7"
+        app:cardElevation="12dp"
+        app:cardCornerRadius="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+
+
+
+        >
+
+
+        <EditText
+            android:id="@+id/questionText"
+            android:layout_width="match_parent"
+            android:layout_height="89dp"
+            android:ems="10"
+            android:hint="اكتب نص السؤال هنا"
+            android:inputType="textMultiLine"
+            android:textSize="20dp"
+            android:layout_margin="4dp"
+            android:textDirection="rtl"
+
+            />
+
+    </android.support.v7.widget.CardView>
+
+
+
+
 
     <Button
         android:id="@+id/publish"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="243dp"
+        android:background="@drawable/buttonshape"
         android:text="انشر"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="338dp" />
+        android:textSize="18dp"
+        android:textAlignment="center"
+        android:textColor="#ffff"
+        android:textStyle="bold"
+        />
 
-    <Spinner
-        android:id="@+id/QuestionSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/textView" />
+
+
 
 </RelativeLayout>
