--- a/app/src/main/res/layout/activity_filter_questions.xml
+++ b/app/src/main/res/layout/activity_filter_questions.xml
@@ -4,52 +4,167 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".filterQuestions">
+    tools:context=".filterQuestions"
+    android:background="#e6f2ff"
+    >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/myLayout"
-        android:layout_marginTop="15dp">
+    <android.support.v7.widget.CardView
+        android:id="@+id/d_1"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        app:cardElevation="20dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="#1fabcb"
+        app:cardCornerRadius="20dp"
+
+        >
 
         <TextView
+
             android:id="@+id/simpleTextID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
+            android:gravity="center"
             android:text="أدخل اسم المادة كتابة أو بالصوت"
-            android:textSize="16dp"/>
-        <EditText
-            android:id="@+id/searchInput"
-            android:layout_width="220dp"
-            android:layout_height="70dp"
-            android:layout_below="@+id/simpleTextID"
-            android:layout_alignParentEnd="true"
-            android:layout_marginLeft="80dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/text_field"
-            android:ems="10"
-            android:padding="3dp"
-            android:textColor="@color/wallet_holo_blue_light"/>
+            android:layout_marginTop="3dp"
+            android:textColor="#ffffff"
+            android:textStyle="bold|italic"
+            android:textSize="20dp"
+            />
 
-        <ImageButton
-            android:id="@+id/voiceSearch"
-            android:layout_width="30dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/simpleTextID"
-            android:layout_toStartOf="@+id/searchInput"
-            android:onClick="getSpeechInput"
-            android:background="@drawable/voice"/>
 
-    </RelativeLayout>
+
+
+    </android.support.v7.widget.CardView>
+
+
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/carr"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#FFFDE7"
+        android:layout_alignParentRight="true"
+        android:layoutDirection="rtl"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="2dp"
+        android:layout_below="@+id/d_1"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            >
+            <android.support.v7.widget.CardView
+                android:id="@+id/ccc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#ffff"
+                android:layout_alignParentRight="true"
+                android:layoutDirection="rtl"
+                android:layout_marginLeft="50dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="2dp"
+                >
+
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:id="@+id/searchInput"
+                    android:hint="البحث ..."
+                    android:inputType="textMultiLine"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:textDirection="rtl"
+                    android:textColor="#000"
+                    android:padding="5dp"
+                    android:textStyle="italic"
+                    android:textSize="20dp"
+                    android:layout_margin="4dp"
+                    android:ems="10"
+                    />
+
+            </android.support.v7.widget.CardView>
+
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/voiceSearch"
+                android:layout_alignBottom="@id/ccc"
+                android:padding="12dp"
+                android:layout_alignParentLeft="true"
+                android:src="@drawable/voice"
+                android:background="#FFFDE7"
+                android:onClick="getSpeechInput"
+                />
+
+
+
+        </RelativeLayout>
+
+
+
+    </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+        android:id="@+id/card2"
+        android:layout_below="@+id/carr"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+
+        android:backgroundTint="#660035"
+
+        app:cardElevation="4dp">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:background="#D87E7E"/>
+
+    </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card"
+        android:layout_below="@+id/card2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="10dp"
+
+        android:backgroundTint="#ffff"
+        app:cardCornerRadius="3dp"
+        app:cardElevation="14dp">
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/searchResults"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/myLayout"
-            android:layout_margin="10dp"></android.support.v7.widget.RecyclerView>
+            android:layout_below="@+id/carr"
+            android:layout_margin="2dp">
+
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.v7.widget.CardView>
+
+
+
 
 
 </RelativeLayout>
