--- a/app/src/main/res/layout/activity_my_questions.xml
+++ b/app/src/main/res/layout/activity_my_questions.xml
@@ -4,12 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".myQuestions">
-    <android.support.v7.widget.RecyclerView
+    tools:context=".myQuestions"
+    android:background="#e6f2ff"
+    >
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:id="@+id/myQuestions"/>
+        android:backgroundTint="#e6f2ff"
+        app:cardElevation="10dp"
+        android:layout_margin="4dp"
+        >
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:id="@+id/myQuestions"
+            android:layout_margin="3dp"
+            android:background="#e6f2ff"
+            />
+
+    </android.support.v7.widget.CardView>
+
+
 
 </RelativeLayout>
