--- a/app/src/main/res/layout/content_notifications.xml
+++ b/app/src/main/res/layout/content_notifications.xml
@@ -6,7 +6,10 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".notifications"
-    tools:showIn="@layout/app_bar_instructor_main">
+    tools:showIn="@layout/app_bar_instructor_main"
+    android:background="#e6f2ff"
+
+    >
     <LinearLayout
         android:id="@+id/container"
         android:orientation="vertical"
@@ -14,37 +17,59 @@
         android:layout_height="match_parent">
 
 
-        <TextView
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:layout_margin="4dp"
             android:layout_marginTop="60dp"
+            app:cardElevation="5dp"
+            >
+            <ListView
+                android:id="@+id/list2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-            android:textSize="20sp"
-            android:text="الحجوزات :"/>
-
-
-    <ListView
-        android:id="@+id/list2"
-        android:layout_marginTop="60dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="5"
-        ></ListView>
+                ></ListView>
 
 
-        <TextView
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="20sp"
-            android:text="الإلغاء :"/>
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            app:cardElevation="5dp"
+            >
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="#e6f2ff"
+                />
+
+        </android.support.v7.widget.CardView>
 
 
-    <ListView
-        android:id="@+id/list3"
-        android:layout_marginTop="60dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="5"></ListView>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:layout_margin="4dp"
+            android:layout_marginTop="60dp"
+            app:cardElevation="5dp"
+            >
+
+            <ListView
+                android:id="@+id/list3"
+                android:layout_marginTop="60dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"></ListView>
+
+        </android.support.v7.widget.CardView>
+
+
+
+
 
     </LinearLayout>
 
