--- a/app/src/main/res/layout/content_notifications2.xml
+++ b/app/src/main/res/layout/content_notifications2.xml
@@ -6,41 +6,65 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".notifications2"
-    tools:showIn="@layout/app_bar_student_main">
+    tools:showIn="@layout/app_bar_student_main"
+    android:background="#e6f2ff"
+    >
     <LinearLayout
         android:id="@+id/container"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="20sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:layout_margin="4dp"
             android:layout_marginTop="60dp"
+            app:cardElevation="5dp"
+            >
+            <ListView
+                android:id="@+id/list1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-            android:text="الأساتذة الجدد :"/>
+                ></ListView>
 
-        <ListView
-        android:id="@+id/list1"
-        android:layout_marginTop="60dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="5"></ListView>
 
-        <TextView
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="20sp"
-            android:text="الإلغاء :"/>
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            app:cardElevation="5dp"
+            >
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="#e6f2ff"
+                />
+
+        </android.support.v7.widget.CardView>
 
 
-    <ListView
-        android:id="@+id/list2"
-        android:layout_marginTop="60dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="5"></ListView>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:layout_margin="4dp"
+            android:layout_marginTop="60dp"
+            app:cardElevation="5dp"
+            >
+
+            <ListView
+                android:id="@+id/list2"
+                android:layout_marginTop="60dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"></ListView>
+
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
