--- a/app/src/main/res/layout/nav_header_instructor_main.xml
+++ b/app/src/main/res/layout/nav_header_instructor_main.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@color/colorPrimary"
+    android:background="#1fabcb"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+
+    >
 
     <ImageView
         android:id="@+id/imageView"
@@ -26,13 +28,17 @@
         android:layout_height="25dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="ITeach"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textStyle="bold"
+        />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="20dp"
-        android:text="Learning is easier!" />
+        android:text="Learning is easier!"
+        android:textStyle="italic"
+        />
 
 </LinearLayout>
